Pull request #479: mtokar-MCA-4356-photo-picker
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-4356-photo-picker to master

Squashed commit of the following:

commit 060307f1d633793fdbea1658164a577fd4e2f75d
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Fri Mar 14 09:03:43 2025 +0000

    Applied suggestion

commit d2fa78d29116d30b53db2cfd1a23a72e1e6718c5
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Tue Mar 11 18:37:14 2025 +0100

    review fixes 3

commit a5ff5d0e544569fa6dcdfb5394510fe1e5137822
Author: Matus Tokar <mtokar@infobip.com>
Date:   Mon Mar 10 14:21:00 2025 +0100

    updated strings

commit 9ae95e242f6c2be9909fda3980a684ec3973d429
Author: Matus Tokar <mtokar@infobip.com>
Date:   Mon Mar 10 13:59:50 2025 +0100

    make AttachmentSource public

commit 856bee359981db071d03ded708070abc419de7d1
Merge: f40e1f42 e13bd749
Author: Matus Tokar <mtokar@infobip.com>
Date:   Mon Mar 10 13:58:08 2025 +0100

    Merge remote-tracking branch 'origin/mtokar-MCA-4356-photo-picker' into mtokar-MCA-4356-photo-picker

commit f40e1f423b2a7b92f289ebe545e217dc390495e5
Author: Matus Tokar <mtokar@infobip.com>
Date:   Mon Mar 10 13:57:51 2025 +0100

    review fixes

commit e13bd749343dc92d079f44e98594be897f1ea596
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 10 10:39:06 2025 +0000

    Applied suggestion

commit 81b9e531761a54e13c1c8a059615d66e6b52c71f
Author: Matus Tokar <mtokar@infobip.com>
Date:   Sun Mar 9 19:32:27 2025 +0100

    remove audio permissions

commit dec68b93e012475cbc6bb77e92ec6d029bd09d54
Author: Matus Tokar <mtokar@infobip.com>
Date:   Sun Mar 9 19:19:54 2025 +0100

    all lanuchers added

commit 10790336fdc9556eb75310fa8ec68a77dc1e6404
Author: Matus Tokar <mtokar@infobip.com>
Date:   Sat Mar 8 00:54:42 2025 +0100

    wip

commit 00f6b756166f3031b7e2973a79667c8dbfe50c5e
Author: Matus Tokar <mtokar@infobip.com>
Date:   Fri Mar 7 16:39:21 2025 +0100

    wip

commit af3ae3ca1cea4a42e293b8f626aadf05ed75b748
A

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">حدث خطأ ما: %1$s.</string>
     <string name="ib_chat_error_code">رمز الخطأ: %1$s.</string>
     <string name="ib_chat_save">يحفظ</string>
+    <string name="ib_chat_attachments_take_a_photo">التقط صورة</string>
+    <string name="ib_chat_attachments_record_video">تسجيل الفيديو</string>
+    <string name="ib_chat_attachments_select_file">حدد الملف</string>
+    <string name="ib_chat_attachments_select_from_gallery">اختر من المعرض</string>
 </resources>
