--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Quelque chose s\'est mal passé : %1$s.</string>
     <string name="ib_chat_error_code">Code d\'erreur : %1$s.</string>
     <string name="ib_chat_save">Sauvegarder</string>
+    <string name="ib_chat_attachments_take_a_photo">Prendre une photo</string>
+    <string name="ib_chat_attachments_record_video">Enregistrer la vidéo</string>
+    <string name="ib_chat_attachments_select_file">Sélectionner le fichier</string>
+    <string name="ib_chat_attachments_select_from_gallery">Sélectionner dans la galerie</string>
 </resources>
