--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-el/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-el/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Κάτι πήγε στραβά: %1$s.</string>
     <string name="ib_chat_error_code">Κωδικός σφάλματος: %1$s.</string>
     <string name="ib_chat_save">Αποθηκεύσετε</string>
+    <string name="ib_chat_attachments_take_a_photo">Τραβήξτε μια φωτογραφία</string>
+    <string name="ib_chat_attachments_record_video">Καταγραφή βίντεο</string>
+    <string name="ib_chat_attachments_select_file">Επιλέξτε αρχείο</string>
+    <string name="ib_chat_attachments_select_from_gallery">Επιλέξτε από τη γκαλερί</string>
 </resources>
