--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Algo salió mal: %1$s.</string>
     <string name="ib_chat_error_code">Código de error: %1$s.</string>
     <string name="ib_chat_save">Ahorrar</string>
+    <string name="ib_chat_attachments_take_a_photo">Tomar una foto</string>
+    <string name="ib_chat_attachments_record_video">Grabar video</string>
+    <string name="ib_chat_attachments_select_file">Seleccionar archivo</string>
+    <string name="ib_chat_attachments_select_from_gallery">Seleccionar de la galería</string>
 </resources>
