--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Jotain meni pieleen: %1$s.</string>
     <string name="ib_chat_error_code">Virhekoodi: %1$s.</string>
     <string name="ib_chat_save">Tallentaa</string>
+    <string name="ib_chat_attachments_take_a_photo">Ottaa valokuva</string>
+    <string name="ib_chat_attachments_record_video">Nauhoittaa video</string>
+    <string name="ib_chat_attachments_select_file">Valitse tiedosto</string>
+    <string name="ib_chat_attachments_select_from_gallery">Valitse galleriasta</string>
 </resources>
