--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Ada yang tidak beres: %1$s.</string>
     <string name="ib_chat_error_code">Kode kesalahan: %1$s.</string>
     <string name="ib_chat_save">Menyimpan</string>
+    <string name="ib_chat_attachments_take_a_photo">Ambil foto</string>
+    <string name="ib_chat_attachments_record_video">Rekam video</string>
+    <string name="ib_chat_attachments_select_file">Pilih file</string>
+    <string name="ib_chat_attachments_select_from_gallery">Pilih dari Galeri</string>
 </resources>
