--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Ada yang tidak bere: %1$s.</string>
     <string name="ib_chat_error_code">Codice errore: %1$s.</string>
     <string name="ib_chat_save">Salva</string>
+    <string name="ib_chat_attachments_take_a_photo">Scattare una foto</string>
+    <string name="ib_chat_attachments_record_video">Registra video</string>
+    <string name="ib_chat_attachments_select_file">Seleziona file</string>
+    <string name="ib_chat_attachments_select_from_gallery">Seleziona dalla galleria</string>
 </resources>
