--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ja/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ja/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">問題が発生しました: %1$s.</string>
     <string name="ib_chat_error_code">エラー コード: %1$s.</string>
     <string name="ib_chat_save">保存</string>
+    <string name="ib_chat_attachments_take_a_photo">写真を撮ってください</string>
+    <string name="ib_chat_attachments_record_video">ビデオを録画します</string>
+    <string name="ib_chat_attachments_select_file">[ファイル]を選択します</string>
+    <string name="ib_chat_attachments_select_from_gallery">ギャラリーから選択します</string>
 </resources>
