--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">문제가 발생했습니다: %1$s.</string>
     <string name="ib_chat_error_code">오류 코드: %1$s.</string>
     <string name="ib_chat_save">구하다</string>
+    <string name="ib_chat_attachments_take_a_photo">사진을 찍으십시오</string>
+    <string name="ib_chat_attachments_record_video">비디오 녹화</string>
+    <string name="ib_chat_attachments_select_file">파일을 선택하십시오</string>
+    <string name="ib_chat_attachments_select_from_gallery">갤러리에서 선택하십시오</string>
 </resources>
