--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Kažkas ne taip: %1$s.</string>
     <string name="ib_chat_error_code">Klaidos kodas: %1$s.</string>
     <string name="ib_chat_save">Sutaupyti</string>
+    <string name="ib_chat_attachments_take_a_photo">Nufotografuoti</string>
+    <string name="ib_chat_attachments_record_video">įrašyti vaizdo įrašą</string>
+    <string name="ib_chat_attachments_select_file">pasirinkti failą</string>
+    <string name="ib_chat_attachments_select_from_gallery">pasirinkti iš galerijos</string>
 </resources>
