--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Er is iets misgegaan: %1$s.</string>
     <string name="ib_chat_error_code">Foutcode: %1$s.</string>
     <string name="ib_chat_save">Redden</string>
+    <string name="ib_chat_attachments_take_a_photo">Maak een foto</string>
+    <string name="ib_chat_attachments_record_video">Video opnemen</string>
+    <string name="ib_chat_attachments_select_file">Selecteer Bestand</string>
+    <string name="ib_chat_attachments_select_from_gallery">Kies uit galerij</string>
 </resources>
