--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Noe gikk galt: %1$s.</string>
     <string name="ib_chat_error_code">Feilkode: %1$s.</string>
     <string name="ib_chat_save">Lagre</string>
+    <string name="ib_chat_attachments_take_a_photo">Ta et bilde</string>
+    <string name="ib_chat_attachments_record_video">Ta opp video</string>
+    <string name="ib_chat_attachments_select_file">Velg fil</string>
+    <string name="ib_chat_attachments_select_from_gallery">Velg fra galleri</string>
 </resources>
