--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ru/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ru/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Что-то пошло не так: %1$s.</string>
     <string name="ib_chat_error_code">Код ошибки: %1$s.</string>
     <string name="ib_chat_save">Сохранять</string>
+    <string name="ib_chat_attachments_take_a_photo">Сделайте фото</string>
+    <string name="ib_chat_attachments_record_video">Записать видео</string>
+    <string name="ib_chat_attachments_select_file">Выберите файл</string>
+    <string name="ib_chat_attachments_select_from_gallery">Выберите из галереи</string>
 </resources>
