--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sk/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sk/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Niečo sa pokazilo: %1$s.</string>
     <string name="ib_chat_error_code">Kód chyby: %1$s.</string>
     <string name="ib_chat_save">Uložiť</string>
+    <string name="ib_chat_attachments_take_a_photo">Odfotografovať</string>
+    <string name="ib_chat_attachments_record_video">Zaznamenať</string>
+    <string name="ib_chat_attachments_select_file">Vyberte súbor</string>
+    <string name="ib_chat_attachments_select_from_gallery">Vyberte z galérie</string>
 </resources>
