--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Nešto je krenulo pogrešno:  %1$s.</string>
     <string name="ib_chat_error_code">Код грешке: %1$с.</string>
     <string name="ib_chat_save">сачувати</string>
+    <string name="ib_chat_attachments_take_a_photo">Фотографисати</string>
+    <string name="ib_chat_attachments_record_video">Сними видео</string>
+    <string name="ib_chat_attachments_select_file">Изаберите датотеку</string>
+    <string name="ib_chat_attachments_select_from_gallery">Изаберите из галерије</string>
 </resources>
