--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Något gick fel: %1$s.</string>
     <string name="ib_chat_error_code">Felkod: %1$s.</string>
     <string name="ib_chat_save">Spara</string>
+    <string name="ib_chat_attachments_take_a_photo">Ta ett foto</string>
+    <string name="ib_chat_attachments_record_video">Inspelningsvideo</string>
+    <string name="ib_chat_attachments_select_file">Välj fil</string>
+    <string name="ib_chat_attachments_select_from_gallery">Välj från galleriet</string>
 </resources>
