--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">มีข้อผิดพลาดเกิดขึ้น: %1$s.</string>
     <string name="ib_chat_error_code">รหัสข้อผิดพลาด: %1$s.</string>
     <string name="ib_chat_save">บันทึก</string>
+    <string name="ib_chat_attachments_take_a_photo">ถ่ายรูป</string>
+    <string name="ib_chat_attachments_record_video">บันทึกวิดีโอ</string>
+    <string name="ib_chat_attachments_select_file">เลือกไฟล์</string>
+    <string name="ib_chat_attachments_select_from_gallery">เลือกจากแกลเลอรี่</string>
 </resources>
