--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Щось пішло не так: %1$s.</string>
     <string name="ib_chat_error_code">Код помилки: %1$s.</string>
     <string name="ib_chat_save">зберегти</string>
+    <string name="ib_chat_attachments_take_a_photo">Сфотографувати</string>
+    <string name="ib_chat_attachments_record_video">Запишіть відео</string>
+    <string name="ib_chat_attachments_select_file">Виберіть Файл</string>
+    <string name="ib_chat_attachments_select_from_gallery">Виберіть з галереї</string>
 </resources>
