--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
@@ -13,4 +13,8 @@
     <string name="ib_chat_error">Đã xảy ra lỗi: %1$s.</string>
     <string name="ib_chat_error_code">Mã lỗi: %1$s.</string>
     <string name="ib_chat_save">Cứu</string>
+    <string name="ib_chat_attachments_take_a_photo">Chụp ảnh</string>
+    <string name="ib_chat_attachments_record_video">Ghi lại video</string>
+    <string name="ib_chat_attachments_select_file">Chọn Tệp</string>
+    <string name="ib_chat_attachments_select_from_gallery">Chọn từ bộ sưu tập</string>
 </resources>
