--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="ib_chat_error">Something went wrong: %1$s.</string>
     <string name="ib_chat_error_code">Error code: %1$s.</string>
     <string name="ib_chat_save">Save</string>
+    <string name="ib_chat_attachments_take_a_photo">Take a photo</string>
+    <string name="ib_chat_attachments_record_video">Record video</string>
+    <string name="ib_chat_attachments_select_file">Select file</string>
+    <string name="ib_chat_attachments_select_from_gallery">Select from Gallery</string>
 </resources>
