Pull request #482: Jdzubak MCA-4524 lc threads api
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4524-lc-threads-api to master

Squashed commit of the following:

commit 83220945c4c1692f4976ae2decfbfe9e559b88b1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 13:49:31 2025 +0100

    MCA-4534 Fixed comments type

commit d618547e3d413fa2e85397420191eacbbe8e3689
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 13:09:05 2025 +0100

    MCA-4534 Lifecycle methods fix

commit 9683933cd487c6ae77c5703c6f5a462e12834ef2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 09:04:30 2025 +0100

    MCA-4534 Imports revert

commit 6348a9bfc8b8b66a9b4b3b5b420be6b096610e4b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 18 13:17:04 2025 +0100

    MCA-4534 Delegation

commit 82fdfb096ec02bfbd3cb83d63fe0b3a968c583ff
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 18 12:37:02 2025 +0100

    MCA-4534 Fixed issue in InAppChatActivityResultDelegate.kt

commit d87da94c82eb8f6b651f1568c070d53e32f24982
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 15:18:46 2025 +0100

    MCA-4534 Added missing Fragment public functions

commit 6b987f5deab87f76a0e810e36661fd45a35dd68d
Merge: 326823af 67d7e09d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 14:39:14 2025 +0100

    MCA-4534 Merge master

commit 326823af18fa2bcd62c34051284fdc8f42d30faa
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 13:43:46 2025 +0100

    MCA-4534 DefaultInAppChatErrorHandler

commit d162f281675e3fb0974a8623ba2c264da4777fa7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 13:38:45 2025 +0100

    MCA-4534 Added default implementations

commit 82d9e4ecede5a9b8632d7f2d340b7280a0e93f62
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 12:10:59 2025 +0100

    MCA-4534 Small fix

commit 0b75d98e2b1a7841134467cf3b9dfbb98cb93949
Merge: 

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="mm_depersonalize">Depersonalize</string>
     <string name="enable_calls">Enable calls</string>
     <string name="disable_calls">Disable calls</string>
+    <string name="open_widget_api">Livechat Widget API</string>
     <string name="runtime_customization">Runtime customization</string>
     <string name="dark_mode_dark">Dark</string>
     <string name="dark_mode_light">Light</string>
