Pull request #493: Jdzubak MCA-4525 lc widget api
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4525-lc-widget-api to master

Squashed commit of the following:

commit f2dcc177c24d04dd237b2f16d0df4f5f513565fc
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed May 7 07:58:53 2025 +0000

    Applied suggestion

commit 521cd126580f3998267fab95e064baceb8b8682d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 7 09:54:31 2025 +0200

    MCA-4525 Update

commit 011ba4721d330680484ec21a5e8c9fce1c7bec63
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 6 20:57:34 2025 +0200

    MCA-4525 New LivechatWidgetApi functions

commit ff96bbc5f1407b8be00d5e9e02692bd7e824a5b3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 6 18:54:14 2025 +0200

    MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance

commit 64f1d4d1b9cfe25cd0196c0fb66ccb930be01108
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 6 16:14:15 2025 +0200

    MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance

commit 11fd13fe99bbd7ac786dbd0deda2a715fe759267
Merge: 8fb3994f 001fe02d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 6 16:00:37 2025 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4525-lc-widget-api

commit 8fb3994fe3dcfd9af4489b8e7c5c4ab7ee234a46
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 6 15:58:46 2025 +0200

    MCA-4525 LivechatWidgetApi new functions to create thread and send messages

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -60,4 +60,12 @@
     <string name="custom_button_checked">Custom button checked</string>
     <string name="custom_button_enabled">Custom button enabled</string>
     <string name="chat_availability">Chat available: %1$b</string>
+    <string name="message_type">Message type</string>
+    <string-array name="message_types">
+        <item>Basic text</item>
+        <item>Draft</item>
+        <item>Attachment</item>
+        <item>Custom data</item>
+    </string-array>
+    <string name="thread_id">Thread ID</string>
 </resources>
