Pull request #502: mtokar-MCA-4689-parse-response-message
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-4689-parse-response-message to master

Squashed commit of the following:

commit f2a3cc8127c92774440ef4d4685d3703e1113345
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon May 26 14:56:12 2025 +0200

    MCA-4711 Added backward compatibility code

commit 47a6a61d13ae70bfba448e08bad0c28c47e3b5bf
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon May 26 14:40:48 2025 +0200

    MCA-4711 Added parsing for old and new message model

commit a1005287a5dcc9d15fb20a49def80ec8027d73e4
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon May 26 13:09:12 2025 +0200

    review fixes

commit 309892fd6e9cf114bdc74da7ea4d3776066f2b27
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon May 26 11:05:41 2025 +0200

    review fixes

commit 227ffcd1b278e3db4901c2850beab095910d361c
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Thu May 22 23:08:57 2025 +0200

    updated parsing for create thread response and send message response

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -66,6 +66,7 @@
         <item>Draft</item>
         <item>Attachment</item>
         <item>Custom data</item>
+        <item>Basic text with Attachment</item>
     </string-array>
     <string name="thread_id">Thread ID</string>
 </resources>
