Pull request #528: ibilobrk-MM-7494-inbox-multiple-topic-fetch
Merge in MML/infobip-mobile-messaging-android from ibilobrk-MM-7494-inbox-multiple-topic-fetch to master

Squashed commit of the following:

commit ec2aff81f8ab8d70149ab2577dc3d04e366250c3
Author: Ivan Bilobrk <Ivan.Bilobrk@infobip.com>
Date:   Tue Sep 9 12:50:34 2025 +0200

    tests fix

commit d55932e3d8af614fc24e75b3788bdeaf86a5deee
Author: Ivan Bilobrk <Ivan.Bilobrk@infobip.com>
Date:   Tue Sep 9 10:06:39 2025 +0200

    refactor

commit 3b1e739244852fef26e5fa9f655ca588784f4feb
Author: Ivan Bilobrk <Ivan.Bilobrk@infobip.com>
Date:   Tue Sep 9 08:53:21 2025 +0200

    refactor

commit e60f93c1e2ff7603d608c3ac82632f36c1a7e0ea
Author: Ivan Bilobrk <Ivan.Bilobrk@infobip.com>
Date:   Mon Sep 8 14:43:08 2025 +0200

    refactor

commit 11b7b01801f31530e298749b8be52fc72135c7af
Author: Ivan Bilobrk <Ivan.Bilobrk@infobip.com>
Date:   Mon Sep 8 10:13:30 2025 +0200

    inbox fetch for multiple topics

--- a/infobip-mobile-messaging-android-demo/src/inbox/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/inbox/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="tb_all">all</string>
     <string name="tb_promo">promo</string>
     <string name="tb_notifications">notifications</string>
+    <string name="tb_promotions_notifications">Promo, Notifications</string>
+    <string name="tb_offers">Offers</string>
     <string name="mark_as_seen">Do you want to mark message as seen?</string>
     <string name="cannot_update_inbox">Cannot update inbox</string>
     <string name="cannot_personalize">Cannot personalize: externalUserId is empty</string>
